--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -15,6 +15,10 @@
 <body>
   <h1>Hello World!</h1>
   <p>Welcome to my cool website B)</p>
+  <h3>Kelompok 1:</h3>
+  <p>Baihaqi Bintang Bahana - 1301223175</p>
+  <p>Binta Adimastama - 1301223005</p>
+  <p>Putu Arjuna Nurgraha Eka Wana - 1301223039</p>
   <pre style="font-size: xx-small; color: white;">
 J777777?Y555Y5555Y?777?JP555PPGGPY?77???7??7?7777777777??Y5J77!!7??????????Y7~~~~~~~!?YPGB#&#GPGGGGG
 ?~........:^~!^...:^^. .!??J7~^:..........::......::......::^^^::........:~:             .:75YYYYYYY
